--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,6 @@
 ---
 
-- src: kamaln7.swapfile
-- src: geerlingguy.nodejs
+- src: oefenweb.swapfile
+# - src: geerlingguy.nodejs
 - src: geerlingguy.composer
 - src: geerlingguy.mysql
