--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,6 @@ inventory = ./inventory
 log_path = ./ansible.log
 host_key_checking = False
 ask_sudo_pass = True
-ask_vault_pass = True
+ask_vault_pass = False
 roles_path = ~/.ansible/roles:/etc/ansible/roles
 callback_whitelist = profile_tasks
