--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 
 # Name of user which will be created on server
-user: vagrant
+user: user
 
 # User password
 password: $6$kgX6rY4/$EOL3Q50Yt8DbriTsqNZpWGVCSSibUVJIaS1BnCadVknfN8.1XXr1MCdkvEbnfS6x7xfYYSghbH7uS.JIXzIy./
@@ -14,7 +14,7 @@ public_key: ~/.ssh/id_rsa.pub
 email: example@example.com
 
 # Timezone to set on server
-timezone: 'Asia/Jakarta'
+timezone: 'Asia/Makassar'
 
 # Domain of your site
 domain: ITS-UrlShortener
