--- a/setup.yml
+++ b/setup.yml
@@ -19,9 +19,9 @@
     - name: fail2ban
       tags: fail2ban
 
-    - name: oefenweb.swapfile
-      tags: swapfile
-      become: true
+#    - name: oefenweb.swapfile
+#      tags: swapfile
+#      become: true
 
     # - name: certbot
     #   tags: ssl
@@ -41,13 +41,13 @@
       tags: php
       become: true
 
-    - name: geerlingguy.composer
-      tags: composer
-      become: true
+#    - name: geerlingguy.composer
+#      tags: composer
+#      become: true
 
-    - name: geerlingguy.mysql
-      tags: mysql
-      become: true
+#    - name: geerlingguy.mysql
+#      tags: mysql
+#      become: true
 
   tasks:
     - include: tasks/setup_deploy_folder_structure.yml
